(f) Fix scrollbar widths - set to zero

--- a/src/styles.css
+++ b/src/styles.css
@@ -7,6 +7,13 @@
 * {
     margin: 0;
     padding: 0;
+    /* Fix for non-webkit browsers */
+    scrollbar-width: none;
+}
+
+*::-webkit-scrollbar {
+    width: 0px;
+    height: 0px;
 }
 
 .material-symbols-rounded {
